--- a/src/app/_modals/edit-series-modal/edit-series-modal.component.html
+++ b/src/app/_modals/edit-series-modal/edit-series-modal.component.html
@@ -130,7 +130,7 @@
                                                           Chapter: {{file.chapter}}
                                                       </div>
                                                       <div class="col">
-                                                          Pages: {{file.pages}
+                                                          Pages: {{file.pages}}
                                                       </div>
                                                       <div class="col">
                                                           Format: <span class="badge badge-secondary">{{utilityService.mangaFormatToText(file.format)}}</span>
