--- a/src/app/_modals/edit-series-modal/edit-series-modal.component.html
+++ b/src/app/_modals/edit-series-modal/edit-series-modal.component.html
@@ -103,10 +103,10 @@
                                   <div>
                                       <div class="row no-gutters">
                                           <div class="col">
-                                              Created: {{volume.created | date: 'dd/MM/yyyy'}}
+                                              Created: {{volume.created | date: 'MM/dd/yyyy'}}
                                           </div>
                                           <div class="col">
-                                              Last Modified: {{volume.lastModified | date: 'dd/MM/yyyy'}}
+                                              Last Modified: {{volume.lastModified | date: 'MM/dd/yyyy'}}
                                           </div>
                                       </div>
                                       <div class="row no-gutters">
