--- a/src/app/shared/_modals/card-details-modal/card-details-modal.component.html
+++ b/src/app/shared/_modals/card-details-modal/card-details-modal.component.html
@@ -11,10 +11,10 @@
         <ng-container *ngIf="isObjectVolume(this.data)">
             <div class="row no-gutters">
                 <div class="col">
-                    Created: {{(this.data.created | date: 'dd/MM/yyyy') || '-'}}
+                    Created: {{(this.data.created | date: 'MM/dd/yyyy') || '-'}}
                 </div>
                 <div class="col">
-                    Last Modified: {{(this.data.lastModified | date: 'dd/MM/yyyy') || '-'}}
+                    Last Modified: {{(this.data.lastModified | date: 'MM/dd/yyyy') || '-'}}
                 </div>
             </div>
             <div class="row no-gutters">
