Fixed a bug with scrollable modals for context info modals.

--- a/src/app/_modals/edit-series-modal/edit-series-modal.component.html
+++ b/src/app/_modals/edit-series-modal/edit-series-modal.component.html
@@ -6,7 +6,7 @@
         <span aria-hidden="true">&times;</span>
         </button>
     </div>
-    <div class="modal-body">
+    <div class="modal-body scrollable-modal">
         <form [formGroup]="editSeriesForm">
             <ul ngbNav #nav="ngbNav" [(activeId)]="active" class="nav-tabs">
                 <li [ngbNavItem]="tabs[0]">
