--- a/src/app/shared/_modals/card-details-modal/card-details-modal.component.html
+++ b/src/app/shared/_modals/card-details-modal/card-details-modal.component.html
@@ -6,7 +6,7 @@
         <span aria-hidden="true">&times;</span>
         </button>
     </div>
-    <div class="modal-body">
+    <div class="modal-body scrollable-modal">
         <h4 *ngIf="isObjectVolume(this.data)">Information</h4>
         <ng-container *ngIf="isObjectVolume(this.data)">
             <div class="row no-gutters">
