CSS adjustment for admin dashboard

--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<h1>Admin Dashboard</h1>
+<h1 style="margin-left: 15px;">Admin Dashboard</h1>
 
 <!-- <button class="btn btn-primary" (click)="restartServer()">Restart Server</button> -->
 <div class="float-right">
