--- a/src/app/admin/_modals/library-editor-modal/library-editor-modal.component.html
+++ b/src/app/admin/_modals/library-editor-modal/library-editor-modal.component.html
@@ -35,6 +35,6 @@
     <div class="modal-footer">
         <button type="button" class="btn btn-light" (click)="reset()">Reset</button>
         <button type="button" class="btn btn-secondary" (click)="close()">Cancel</button>
-        <button type="submit" class="btn btn-primary" (click)="submitLibrary()" [disabled]="!libraryForm.dirty">Save</button>
+        <button type="submit" class="btn btn-primary" (click)="submitLibrary()" [disabled]="!libraryForm.dirty && !madeChanges">Save</button>
     </div>
 </form>
