Implement comic support

--- a/src/app/admin/_modals/library-editor-modal/library-editor-modal.component.html
+++ b/src/app/admin/_modals/library-editor-modal/library-editor-modal.component.html
@@ -19,6 +19,7 @@
             <label for="library-type">Type</label>
             <select class="form-control" id="library-type" formControlName="type">
                 <option [value]="0">Manga</option>
+                <option [value]="1">Comic</option>
             </select>
         </div>
         
