Any disabled controls should show not-allowed pointer.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,6 +21,10 @@
 @import '~bootstrap/scss/bootstrap';
 @import '~bootstrap/scss/mixins/_breakpoints.scss';
 
+.disabled {
+  cursor: not-allowed !important;
+}
+
 
 @include media-breakpoint-down(xs, (xs: 0, sm: 576px, md: 768px, lg: 992px, xl: 1200px)) {
     .phone-hidden {
