--- a/src/app/admin/manage-users/manage-users.component.html
+++ b/src/app/admin/manage-users/manage-users.component.html
@@ -3,7 +3,7 @@
 <div class="container-fluid">
     <div class="row mb-2">
         <div class="col-8"><h3>Users</h3></div>
-        <div class="col-4"><button class="btn btn-primary float-right" (click)="createMember()">New User</button></div>
+        <div class="col-4"><button class="btn btn-primary float-right" (click)="createMember()"><i class="fa fa-plus" aria-hidden="true"></i><span class="phone-hidden">&nbsp;Add User</span></button></div>
     </div>
     <ul class="list-group" *ngIf="!createMemberToggle; else createUser">
         <li *ngFor="let member of members" class="list-group-item">
