--- a/src/app/shared/card-item/card-item.component.html
+++ b/src/app/shared/card-item/card-item.component.html
@@ -4,7 +4,12 @@
       <div class="progress-banner" *ngIf="read < total && total > 0 && read !== (total -1)">
         <p><ngb-progressbar type="warning" height="5px" [value]="read" [max]="total - 1"></ngb-progressbar></p>
       </div>
-      <div class="not-read-badge" *ngIf="read === 0"></div>
+      <div class="error-banner" *ngIf="total === 0">
+        Cannot Read Archive
+        <!-- <p><ngb-progressbar type="error" height="5px" [value]="100" [max]="100"></ngb-progressbar></p> -->
+      </div>
+      
+      <div class="not-read-badge" *ngIf="read === 0 && total > 0"></div>
       <div class="card-actions">
         <app-card-actionables (actionHandler)="performAction($event)" [actions]="actions" [labelBy]="title"></app-card-actionables>
       </div>
