--- a/src/app/shared/card-item/card-item.component.scss
+++ b/src/app/shared/card-item/card-item.component.scss
@@ -4,6 +4,20 @@ $triangle-size: 40px;
 $image-height: 230px;
 $image-width: 160px;
 
+.error-banner {
+    width: 160px;
+    height: 18px;
+    background-color: $error-color;
+    font-size: 12px;
+    color: white;
+    text-transform: uppercase;
+    text-align: center;
+
+    position: absolute;
+    top: 0px;
+    right: 0px;
+}
+
 .card {
     margin: 5px;
     max-width: $image-width;
