--- a/src/app/series-detail/series-detail.component.html
+++ b/src/app/series-detail/series-detail.component.html
@@ -32,12 +32,12 @@
                 </div>
             </div>
             <div class="row no-gutters">
-                <p class="user-review {{series?.userReview ? 'mt-1' : ''}}">{{series?.userReview}} 
+                <p class="user-review {{series?.userReview ? 'mt-1' : ''}}" [innerHtml]="userReview | safeHtml">
                     <button *ngIf="series?.userReview" class="btn btn-sm btn-icon" (click)="openReviewModal(true)" placement="top" ngbTooltip="Edit Review" attr.aria-label="Edit Review"><i class="fa fa-pen"></i></button></p>
             </div>
             <div class="row no-gutters {{series?.userReview ? '' : 'mt-1'}}">
                 <!-- TODO: Read more component -->
-                <p>{{series?.summary}}</p>
+                <p [innerHtml]="seriesSummary | safeHtml"></p>
             </div>
             <div>
                 <div class="row no-gutters" *ngIf="false">
