Implemented Refactor Review to be bound to the star control rather than having a text review so the user can review without rating. #125

--- a/src/app/series-detail/series-detail.component.html
+++ b/src/app/series-detail/series-detail.component.html
@@ -29,11 +29,11 @@
                 </div>
                 <div class="ml-2">
                     <ngb-rating style="margin-top: 2px; font-size: 1.5rem;" [(rate)]="series!.userRating" (rateChange)="updateRating($event)" (click)="promptToReview()"></ngb-rating>
+                    <button *ngIf="series?.userRating || series.userRating" class="btn btn-sm btn-icon" (click)="openReviewModal(true)" placement="top" ngbTooltip="Edit Review" attr.aria-label="Edit Review"><i class="fa fa-pen"></i></button>
                 </div>
             </div>
             <div class="row no-gutters">
-                <p class="user-review {{series?.userReview ? 'mt-1' : ''}}" [innerHtml]="userReview | safeHtml">
-                    <button *ngIf="series?.userReview" class="btn btn-sm btn-icon" (click)="openReviewModal(true)" placement="top" ngbTooltip="Edit Review" attr.aria-label="Edit Review"><i class="fa fa-pen"></i></button></p>
+                <app-read-more class="user-review {{userReview ? 'mt-1' : ''}}" [text]="series?.userReview || ''" [maxLength]="250"></app-read-more>
             </div>
             <div class="row no-gutters {{series?.userReview ? '' : 'mt-1'}}">
                 <app-read-more [text]="seriesSummary" [maxLength]="250"></app-read-more>
