--- a/src/app/_modals/review-series-modal/review-series-modal.component.html
+++ b/src/app/_modals/review-series-modal/review-series-modal.component.html
@@ -9,6 +9,14 @@
     <div class="modal-body">
         <form [formGroup]="reviewGroup">
             <div class="form-group">
+                <label for="rating">Rating</label>
+                <div>
+                    <ngb-rating style="margin-top: 2px; font-size: 1.5rem;" formControlName="rating"></ngb-rating>
+                    <button class="btn btn-information ml-2" (click)="clearRating()"><i aria-hidden="true" class="fa fa-ban"></i><span class="phone-hidden">&nbsp;Clear</span></button>
+                </div>
+            </div>
+
+            <div class="form-group">
                 <label for="review">Review</label>
                 <textarea id="review" class="form-control" formControlName="review" rows="3"></textarea>
             </div>
