Fixed #138. Search wasn't showing localizedName due to a rendering issue.

--- a/src/app/nav-header/nav-header.component.html
+++ b/src/app/nav-header/nav-header.component.html
@@ -17,6 +17,8 @@
                     searchKeyword="name"
                     placeholder="Search Series"
                     [initialValue]=""
+                    [focusFirst]="true"
+                    [minQueryLength]="2"
                     (selected)='clickSearchResult($event)'
                     (inputChanged)='onChangeSearch($event)'
                     [isLoading]="isLoading"
@@ -31,7 +33,10 @@
                         <img class="mr-3 search-result" src="{{imageService.getSeriesCoverImage(item.seriesId)}}">
                       </div>
                       <div class="ml-1">
-                        <span [innerHTML]="item.name"></span>
+                        <span *ngIf="item.name.toLowerCase().indexOf(searchTerm) >= 0; else localizedName" [innerHTML]="item.name"></span>
+                        <ng-template #localizedName>
+                          <span [innerHTML]="item.localizedName"></span>
+                        </ng-template>
                         <span class="form-text" style="font-size: 0.8rem;">in {{item.libraryName}}</span>
                       </div>
                     </div>
