Refactored Library Type dropdown to use an API so UI/Backend is in sync.

--- a/src/app/admin/_modals/library-editor-modal/library-editor-modal.component.html
+++ b/src/app/admin/_modals/library-editor-modal/library-editor-modal.component.html
@@ -18,8 +18,7 @@
         <div class="form-group" *ngIf="this.library === undefined">
             <label for="library-type">Type</label>
             <select class="form-control" id="library-type" formControlName="type">
-                <option [value]="0">Manga</option>
-                <option [value]="1">Comic</option>
+                <option [value]="i" *ngFor="let opt of libraryTypes; let i = index">{{opt}}</option>
             </select>
         </div>
         
