Basic iframe implementation is now working

--- a/src/app/book-reader/book-reader/book-reader.component.html
+++ b/src/app/book-reader/book-reader/book-reader.component.html
@@ -4,4 +4,7 @@
     </iframe>
 </ng-container>
 
+<button class="btn btn-primary" (click)="prevPage()">Prev page</button>
+<button class="btn btn-primary" (click)="nextPage()">Next page</button>
+
 <!-- <div id="area"></div> -->
