Removed isSpecial from volume

--- a/src/app/shared/_modals/card-details-modal/card-details-modal.component.html
+++ b/src/app/shared/_modals/card-details-modal/card-details-modal.component.html
@@ -14,7 +14,7 @@
                     Id: {{data.id}}
                 </div>
                 <div class="col">
-                    Special: {{(data.isSpecial ? 'Yes' : 'No') || 'N/A'}}
+                    <!-- Special: {{(data?.isSpecial ? 'Yes' : 'No') || 'N/A'}} -->
                 </div>
             </div>
             <div class="row no-gutters">
