--- a/src/app/book-reader/book-reader/book-reader.component.html
+++ b/src/app/book-reader/book-reader/book-reader.component.html
@@ -1,17 +1,67 @@
-<div #readingSection>
-    <div [ngStyle]="pageStyles" [innerHtml]="page" *ngIf="page !== undefined"></div>
+<div class="sticky-top reading-bar {{darkMode ? 'dark-mode' : ''}}">
+    <button class="btn btn-primary" (click)="prevPage()">Prev page</button>
+    <button class="btn btn-secondary" (click)="drawerOpen = !drawerOpen">Chapter List</button>
+    <button class="btn btn-primary" (click)="nextPage()">Next page</button>
 </div>
 
-<div class="drawer">
-    <ul *ngFor="let chapterGroup of chapters">
-        <li>{{chapterGroup.title}}</li>
-        <ul *ngFor="let chapter of chapterGroup.children">
-            <li><a href="javascript:void()" (click)="loadChapter(chapter.page, chapter.part)">{{chapter.title}}</a></li>
-        </ul>
-    </ul>
+<div class="reading-area {{darkMode ? 'dark-mode' : ''}}">
+    <app-drawer #commentDrawer="drawer" [isOpen]="drawerOpen" [style.--drawer-width]="'300px'" (drawerClosed)="closeDrawer()" class="drawer">
+        <div header>
+            <h2 style="margin-top: 0.5rem">Book Menu
+                <button type="button" class="close" aria-label="Close" (click)="commentDrawer.close()">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </h2>
+            
+        </div>
+        <div body>
+            <div class="control-container">
+                <div class="controls">
+                    <label>Font Family</label>
+                    <!-- Dropdown -->
+                </div>
+                <div class="controls">
+                    <label>Font Size</label>
+                    <button (click)="updateFontSize(-10)" class="btn btn-icon" title="Decrease"><i class="fa fa-minus" aria-hidden="true"></i></button>
+                    <span>{{pageStyles['font-size']}}</span>
+                    <button (click)="updateFontSize(10)"  class="btn btn-icon" title="Increase"><i class="fa fa-plus" aria-hidden="true"></i></button>
+                </div>
+                <div class="controls">
+                    <label>Line Spacing</label>
+                    <button (click)="updateLineSpacing(-0.1)" class="btn btn-icon" title="Decrease"><i class="fa fa-minus" aria-hidden="true"></i></button>
+                    <span>{{pageStyles['line-height']}}</span>
+                    <button (click)="updateLineSpacing(0.1)"  class="btn btn-icon" title="Increase"><i class="fa fa-plus" aria-hidden="true"></i></button>
+                </div>
+                <div class="controls">
+                    <label>Margin</label>
+                    <button (click)="updateMargin(-10)" class="btn btn-icon" title="Decrease"><i class="fa fa-minus" aria-hidden="true"></i></button>
+                    <!-- <span></span> -->
+                    <button (click)="updateMargin(10)"  class="btn btn-icon" title="Increase"><i class="fa fa-plus" aria-hidden="true"></i></button>
+                </div>
+                <div class="controls">
+                    <label>Dark Mode</label>
+                    <button (click)="toggleDarkMode()" class="btn btn-icon"><i class="fa {{darkMode ? 'fa-sun' : 'fa-moon'}}" aria-hidden="true"></i></button>
+                </div>
+                <div class="controls">
+                    <button (click)="resetSettings()" class="btn btn-secondary">Reset Settings</button>
+                    <button (click)="saveSettings()" class="btn btn-secondary">Save Settings</button>
+                </div>
+            </div>
+            <h3>Table of Contents</h3>
+            <ul *ngFor="let chapterGroup of chapters" style="padding-inline-start: 0px">
+                <div *ngIf="chapterGroup.children.length > 0; else noChildren">
+                    <li>{{chapterGroup.title}}</li>
+                    <ul *ngFor="let chapter of chapterGroup.children">
+                        <li><a href="javascript:void()" (click)="loadChapter(chapter.page, chapter.part)">{{chapter.title}}</a></li>
+                    </ul>
+                </div>
+                <ng-template #noChildren>
+                    <li style="list-style: none;"><a href="javascript:void()" (click)="loadChapter(chapterGroup.page, chapterGroup.part)">{{chapterGroup.title}}</a></li>
+                </ng-template>
+            </ul>
+        </div>
+    </app-drawer>
+    <div #readingSection class="reading-section" [ngStyle]="pageStyles">
+        <div [innerHtml]="page" *ngIf="page !== undefined"></div>
+    </div>
 </div>
-
-<button class="btn btn-primary" (click)="prevPage()">Prev page</button>
-<button class="btn btn-primary" (click)="nextPage()">Next page</button>
-
-<button class="btn btn-secondary" (click)="injectStyles()">Inject Styles</button>
