Changed styles up a bit

--- a/src/app/book-reader/book-reader/book-reader.component.scss
+++ b/src/app/book-reader/book-reader/book-reader.component.scss
@@ -1,17 +1,31 @@
 .control-container {
-    border-bottom: 1px solid grey;
+    padding-bottom: 5px;
 }
 
 .dark-mode {
     * {
         background-color: rgb(41, 41, 41, 0.90);
+        box-shadow: none;
+        text-shadow: none;
+        border-radius: unset;
+        //border-color: #555;
+        //outline-color: #555; // maybe not
     }
 
     *:not(input) {
         color: #dcdcdc;
     }
+
+    .btn-icon {
+        background-color: transparent;
+    }
+
+    :link {
+        color: #8db2e5 !important;
+    }
 }
 
 .reading-section {
     overflow-y: scroll;
+    height: 100vh;
 }
