--- a/src/app/book-reader/book-reader/book-reader.component.html
+++ b/src/app/book-reader/book-reader/book-reader.component.html
@@ -21,32 +21,31 @@
                     <!-- Dropdown -->
                 </div>
                 <div class="controls">
-                    <label>Font Size</label>
                     <button (click)="updateFontSize(-10)" class="btn btn-icon" title="Decrease"><i class="fa fa-minus" aria-hidden="true"></i></button>
-                    <span>{{pageStyles['font-size']}}</span>
+                    <label>Font Size</label>
                     <button (click)="updateFontSize(10)"  class="btn btn-icon" title="Increase"><i class="fa fa-plus" aria-hidden="true"></i></button>
                 </div>
                 <div class="controls">
-                    <label>Line Spacing</label>
                     <button (click)="updateLineSpacing(-0.1)" class="btn btn-icon" title="Decrease"><i class="fa fa-minus" aria-hidden="true"></i></button>
-                    <span>{{pageStyles['line-height']}}</span>
+                    <label>Line Spacing</label>
                     <button (click)="updateLineSpacing(0.1)"  class="btn btn-icon" title="Increase"><i class="fa fa-plus" aria-hidden="true"></i></button>
                 </div>
                 <div class="controls">
-                    <label>Margin</label>
                     <button (click)="updateMargin(-10)" class="btn btn-icon" title="Decrease"><i class="fa fa-minus" aria-hidden="true"></i></button>
-                    <!-- <span></span> -->
+                    <label>Margin</label>
                     <button (click)="updateMargin(10)"  class="btn btn-icon" title="Increase"><i class="fa fa-plus" aria-hidden="true"></i></button>
                 </div>
                 <div class="controls">
-                    <label>Dark Mode</label>
-                    <button (click)="toggleDarkMode()" class="btn btn-icon"><i class="fa {{darkMode ? 'fa-sun' : 'fa-moon'}}" aria-hidden="true"></i></button>
+                    <button (click)="toggleDarkMode()" class="btn btn-icon"><i class="fa fa-sun" aria-hidden="true"></i></button>
+                    <label>Dark Mode</label> <!-- {{darkMode ? 'fa-moon' : 'fa-sun'}}-->
+                    <button (click)="toggleDarkMode()" class="btn btn-icon"><i class="fa fa-moon" aria-hidden="true"></i></button>
                 </div>
                 <div class="controls">
                     <button (click)="resetSettings()" class="btn btn-secondary">Reset Settings</button>
-                    <button (click)="saveSettings()" class="btn btn-secondary">Save Settings</button>
+                    <button (click)="saveSettings()" class="btn btn-primary" style="margin-left:10px;">Save Settings</button>
                 </div>
             </div>
+            <hr>
             <h3>Table of Contents</h3>
             <ul *ngFor="let chapterGroup of chapters" style="padding-inline-start: 0px">
                 <div *ngIf="chapterGroup.children.length > 0; else noChildren">
