--- a/src/app/book-reader/book-reader/book-reader.component.scss
+++ b/src/app/book-reader/book-reader/book-reader.component.scss
@@ -26,6 +26,7 @@
 }
 
 .reading-section {
-    overflow-y: scroll;
+    // TODO: Add an animation when it loads in
+    //overflow-y: ;
     height: 100vh;
 }
