--- a/src/app/shared/drawer/drawer.component.scss
+++ b/src/app/shared/drawer/drawer.component.scss
@@ -7,8 +7,8 @@
     top: 0;
     right: 0;
     width: var(--drawer-width);
-    //height: 100vh;
-    height: auto;
+    height: 100vh;
+    //height: auto;
     background: #fff;
     transition: all 300ms;
     box-shadow: -3px 0px 6px 1px #00000026;
