Chapter group titles are now clickable

--- a/src/app/book-reader/book-reader/book-reader.component.scss
+++ b/src/app/book-reader/book-reader/book-reader.component.scss
@@ -2,9 +2,15 @@
     padding-bottom: 5px;
 }
 
-li.active {
-    font-weight: bold;
+.table-of-contents li {
+    cursor: pointer;
+
+    &.active {
+        font-weight: bold;
+    }
 }
+
+
 
 .dark-mode {
     * {
