--- a/src/app/book-reader/book-reader/book-reader.component.html
+++ b/src/app/book-reader/book-reader/book-reader.component.html
@@ -1,73 +1,77 @@
 <div class="container-flex {{darkMode ? 'dark-mode' : ''}}">
-    <div class="sticky-top reading-bar row justify-content-between">
-        <button class="btn btn-outline-secondary btn-icon col-2" (click)="prevPage()" title="Previous Page"><i class="fa fa-arrow-left" aria-hidden="true"></i></button>
-        <button class="btn btn-secondary col-2" (click)="closeReader()">Close Book</button>
-        <button class="btn btn-secondary col-2" (click)="drawerOpen = !drawerOpen">Chapter List</button>
-        <button class="btn btn-outline-secondary btn-icon col-2" (click)="nextPage()" title="Next Page"><i class="fa fa-arrow-right" aria-hidden="true"></i></button>
+    <div class="fixed-top">
+        <div class="reading-bar row no-gutters justify-content-between">
+            <button class="btn btn-outline-secondary btn-icon col-2" (click)="prevPage()" title="Previous Page"><i class="fa fa-arrow-left" aria-hidden="true"></i><span class="phone-hidden">&nbsp;Previous Page</span></button>
+            <button class="btn btn-secondary col-2" (click)="drawerOpen = !drawerOpen"><i class="fa fa-bars"></i>&nbsp;Settings</button>
+            <div class="col-2 phone-hidden" style="margin-top: 5px;"><!-- TODO: THE BOOK TITLE ---> {{filename}} </div>
+            <button class="btn btn-secondary col-2" (click)="closeReader()"><i class="fa fa-times-circle"></i>&nbsp;Close <span class="phone-hidden">Book</span></button>
+            <button class="btn btn-outline-secondary btn-icon col-2" (click)="nextPage()" title="Next Page"><span class="phone-hidden">Next Page&nbsp;</span><i class="fa fa-arrow-right" aria-hidden="true"></i></button>
+        </div>
+        <app-drawer #commentDrawer="drawer" [isOpen]="drawerOpen" [style.--drawer-width]="'300px'" [style.--drawer-top-offset]="'38px'" [style.--drawer-background-color]="backgroundColor" (drawerClosed)="closeDrawer()">
+            <div header>
+                <h2 style="margin-top: 0.5rem">Book Settings
+                    <button type="button" class="close" aria-label="Close" (click)="commentDrawer.close()">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </h2>
+                
+            </div>
+            <div body>
+                <div class="control-container">
+                    <div class="controls">
+                        <label>Font Family</label>
+                        <!-- Dropdown -->
+                    </div>
+                    <div class="controls">
+                        <button (click)="updateFontSize(-10)" class="btn btn-icon" title="Decrease"><i class="fa fa-minus" aria-hidden="true"></i></button>
+                        <label>Font Size</label>
+                        <button (click)="updateFontSize(10)"  class="btn btn-icon" title="Increase"><i class="fa fa-plus" aria-hidden="true"></i></button>
+                    </div>
+                    <div class="controls">
+                        <button (click)="updateLineSpacing(-10)" class="btn btn-icon" title="Decrease"><i class="fa fa-minus" aria-hidden="true"></i></button>
+                        <label>Line Spacing</label>
+                        <button (click)="updateLineSpacing(10)"  class="btn btn-icon" title="Increase"><i class="fa fa-plus" aria-hidden="true"></i></button>
+                    </div>
+                    <div class="controls">
+                        <button (click)="updateMargin(-5)" class="btn btn-icon" title="Decrease"><i class="fa fa-minus" aria-hidden="true"></i></button>
+                        <label>Margin</label>
+                        <button (click)="updateMargin(5)"  class="btn btn-icon" title="Increase"><i class="fa fa-plus" aria-hidden="true"></i></button>
+                    </div>
+                    <div class="controls">
+                        <button (click)="toggleDarkMode(false)" class="btn btn-icon"><i class="fa fa-sun" aria-hidden="true"></i></button>
+                        <label>Dark Mode</label>
+                        <button (click)="toggleDarkMode(true)" class="btn btn-icon"><i class="fa fa-moon" aria-hidden="true"></i></button>
+                    </div>
+                    <div class="row no-gutters justify-content-between">
+                        <button (click)="resetSettings()" class="btn btn-secondary col">Reset</button>
+                        <button (click)="saveSettings()" class="btn btn-primary col" style="margin-left:10px;">Save</button>
+                    </div>
+                </div>
+                <hr>
+                <div class="table-of-contents">
+                    <h3>Table of Contents</h3>
+                    <div *ngIf="chapters.length === 1; else nestedChildren">
+                        <ul> <!-- style="padding-inline-start: 0px"-->
+                            <li *ngFor="let chapter of chapters[0].children">
+                                <a href="javascript:void()" (click)="loadChapter(chapter.page, chapter.part)">{{chapter.title}}</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <ng-template #nestedChildren>
+                        <ul *ngFor="let chapterGroup of chapters" style="padding-inline-start: 0px">
+                            <!-- TODO: Add expanders if there are multiple sections-->
+                            <li class="{{chapterGroup.page == pageNum ? 'active': ''}}" (click)="loadChapter(chapterGroup.page, '')">{{chapterGroup.title}}</li>
+                            <ul *ngFor="let chapter of chapterGroup.children">
+                                <li><a href="javascript:void()" (click)="loadChapter(chapter.page, chapter.part)">{{chapter.title}}</a></li>
+                            </ul>
+                        </ul>
+                    </ng-template>
+                </div>
+            </div>
+        </app-drawer>
     </div>
 
-    <app-drawer #commentDrawer="drawer" [isOpen]="drawerOpen" [style.--drawer-width]="'300px'" [style.--drawer-top-offset]="'40px'" (drawerClosed)="closeDrawer()">
-        <div header>
-            <h2 style="margin-top: 0.5rem">Book Menu
-                <button type="button" class="close" aria-label="Close" (click)="commentDrawer.close()">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </h2>
-            
-        </div>
-        <div body>
-            <div class="control-container">
-                <div class="controls">
-                    <label>Font Family</label>
-                    <!-- Dropdown -->
-                </div>
-                <div class="controls">
-                    <button (click)="updateFontSize(-10)" class="btn btn-icon" title="Decrease"><i class="fa fa-minus" aria-hidden="true"></i></button>
-                    <label>Font Size</label>
-                    <button (click)="updateFontSize(10)"  class="btn btn-icon" title="Increase"><i class="fa fa-plus" aria-hidden="true"></i></button>
-                </div>
-                <div class="controls">
-                    <button (click)="updateLineSpacing(-0.1)" class="btn btn-icon" title="Decrease"><i class="fa fa-minus" aria-hidden="true"></i></button>
-                    <label>Line Spacing</label>
-                    <button (click)="updateLineSpacing(0.1)"  class="btn btn-icon" title="Increase"><i class="fa fa-plus" aria-hidden="true"></i></button>
-                </div>
-                <div class="controls">
-                    <button (click)="updateMargin(-10)" class="btn btn-icon" title="Decrease"><i class="fa fa-minus" aria-hidden="true"></i></button>
-                    <label>Margin</label>
-                    <button (click)="updateMargin(10)"  class="btn btn-icon" title="Increase"><i class="fa fa-plus" aria-hidden="true"></i></button>
-                </div>
-                <div class="controls">
-                    <button (click)="toggleDarkMode()" class="btn btn-icon"><i class="fa fa-sun" aria-hidden="true"></i></button>
-                    <label>Dark Mode</label> <!-- {{darkMode ? 'fa-moon' : 'fa-sun'}}-->
-                    <button (click)="toggleDarkMode()" class="btn btn-icon"><i class="fa fa-moon" aria-hidden="true"></i></button>
-                </div>
-                <div class="controls">
-                    <button (click)="resetSettings()" class="btn btn-secondary">Reset Settings</button>
-                    <button (click)="saveSettings()" class="btn btn-primary" style="margin-left:10px;">Save Settings</button>
-                </div>
-            </div>
-            <hr>
-            <div class="table-of-contents">
-                <h3>Table of Contents</h3>
-                <div *ngIf="chapters.length === 1; else nestedChildren">
-                    <ul> <!-- style="padding-inline-start: 0px"-->
-                        <li *ngFor="let chapter of chapters[0].children">
-                            <a href="javascript:void()" (click)="loadChapter(chapter.page, chapter.part)">{{chapter.title}}</a>
-                        </li>
-                    </ul>
-                </div>
-                <ng-template #nestedChildren>
-                    <ul *ngFor="let chapterGroup of chapters" style="padding-inline-start: 0px">
-                        <!-- TODO: Add expanders if there are multiple sections-->
-                        <li class="{{chapterGroup.page == pageNum ? 'active': ''}}" (click)="loadChapter(chapterGroup.page, '')">{{chapterGroup.title}}</li>
-                        <ul *ngFor="let chapter of chapterGroup.children">
-                            <li><a href="javascript:void()" (click)="loadChapter(chapter.page, chapter.part)">{{chapter.title}}</a></li>
-                        </ul>
-                    </ul>
-                </ng-template>
-            </div>
-        </div>
-    </app-drawer>
+    
 
     <ng-container *ngIf="isLoading">
         <div class="spinner-border text-secondary loading" role="status">
@@ -75,7 +79,9 @@
         </div>
     </ng-container>
 
-    <div #readingSection class="reading-section" [ngStyle]="pageStyles">
+    
+
+    <div #readingSection class="reading-section" [attr.style]="readerStyles | safeStyle">
         <div [innerHtml]="page" *ngIf="page !== undefined"></div>
     </div>
 </div>
