--- a/src/app/shared/drawer/drawer.component.scss
+++ b/src/app/shared/drawer/drawer.component.scss
@@ -1,6 +1,7 @@
 :host {
     --drawer-width: 400px;
     --drawer-top-offset: 0px;
+    --drawer-background-color: '#fff';
   }
   
   .drawer-container {
@@ -10,9 +11,10 @@
     width: var(--drawer-width);
     height: 100vh;
     //height: auto;
-    background: #fff;
+    background: var(--drawer-background-color);
     transition: all 300ms;
     box-shadow: -3px 0px 6px 1px #00000026;
+    //box-shadow: 6px ​0px 6px -3px #00000026; // looks good, but invalid somehow
     padding: 0px;
     z-index: 1021;
     overflow: auto;
